// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List :props :asyncLoading is a function, () => VNode. 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    <!---->
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <p>
      This is a loading
    </p>
  </div>
  
</div>
`;

exports[`List :props :asyncLoading is a string 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load t-list__load--loading"
  >
    <div>
      <div
        class="t-loading t-size-m t-loading-mask t-loading-lock v-transfer-dom"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="medium"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
        <!---->
      </div>
      <span>
        正在加载中，请稍等
      </span>
    </div>
  </div>
  
</div>
`;

exports[`List :props :asyncLoading is load-more 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load t-list__load--load-more"
  >
    <span>
      点击加载更多
    </span>
  </div>
  
</div>
`;

exports[`List :props :footer is a function, () => VNode. 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    <!---->
  </ul>
  <div
    class="t-list__footer"
  >
    <p>
      This is a footer
    </p>
  </div>
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :footer is a string 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <div
    class="t-list__footer"
  >
    footer
  </div>
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :header is a function, () => VNode. 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <div
    class="t-list__header"
  >
    <p>
      This is a header
    </p>
  </div>
  <ul
    class="t-list-items"
  >
    <!---->
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :header is a string 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <div
    class="t-list__header"
  >
    header
  </div>
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :layout 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :size 1`] = `
<div
  class="t-list t-size-l"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :split 1`] = `
<div
  class="t-list t-size-m t-list--split"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`List :props :stripe 1`] = `
<div
  class="t-list t-size-m"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    text
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`ListItem :props :action 1`] = `
<li
  action="action"
  class="t-list-item"
>
  <div
    class="t-list-item-main"
  >
    
    text
    
    <!---->
  </div>
</li>
`;

exports[`ListItem :props :content 1`] = `
<li
  class="t-list-item"
  content="content"
>
  <div
    class="t-list-item-main"
  >
    
    text
    
    <!---->
  </div>
</li>
`;

exports[`ListItem :props :content is a function, () => VNode. 1`] = `
<li
  class="t-list-item"
  content="() => (0, _vue.createVNode)(\\"p\\", null, [(0, _vue.createTextVNode)(\\"This is a content\\")])"
>
  <div
    class="t-list-item-main"
  >
    <!---->
    <!---->
  </div>
</li>
`;

exports[`ListItem :props :default 1`] = `
<li
  class="t-list-item"
  default="default"
>
  <div
    class="t-list-item-main"
  >
    
    text
    
    <!---->
  </div>
</li>
`;

exports[`ListItem :props :default is a function, () => VNode. 1`] = `
<li
  class="t-list-item"
  default="() => (0, _vue.createVNode)(\\"p\\", null, [(0, _vue.createTextVNode)(\\"default\\")])"
>
  <div
    class="t-list-item-main"
  >
    <!---->
    <!---->
  </div>
</li>
`;

exports[`ListItemMeta :props :description 1`] = `
<div
  class="t-list-item__meta"
>
  
  <!---->
  <div
    class="t-list-item__meta-content"
  >
    <!---->
    <p
      class="t-list-item__meta-description"
    >
      description
    </p>
  </div>
  
</div>
`;

exports[`ListItemMeta :props :description is a function, () => VNode. 1`] = `
<div
  class="t-list-item__meta"
>
  
  <!---->
  <div
    class="t-list-item__meta-content"
  >
    <!---->
    <p
      class="t-list-item__meta-description"
    >
      <p>
        description
      </p>
    </p>
  </div>
  
</div>
`;

exports[`ListItemMeta :props :image 1`] = `
<div
  class="t-list-item__meta"
>
  
  <div
    class="t-list-item__meta-avatar"
  >
    <img
      src="image"
    />
  </div>
  <div
    class="t-list-item__meta-content"
  >
    <!---->
    <!---->
  </div>
  
</div>
`;

exports[`ListItemMeta :props :title 1`] = `
<div
  class="t-list-item__meta"
>
  
  <!---->
  <div
    class="t-list-item__meta-content"
  >
    <h3
      class="t-list-item__meta-title"
    >
      title
    </h3>
    <!---->
  </div>
  
</div>
`;

exports[`ListItemMeta :props :title is a function, () => VNode. 1`] = `
<div
  class="t-list-item__meta"
>
  
  <!---->
  <div
    class="t-list-item__meta-content"
  >
    <h3
      class="t-list-item__meta-title"
    >
      <p>
        title
      </p>
    </h3>
    <!---->
  </div>
  
</div>
`;
